legacy/test/validate/metadata/test_case/invalid/.tree
children:
- children: null
  metadata: null
  mtime: null
  name: .tree
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: __init__.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_md_missing_type.md
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_missing_fields.yaml
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_missing_owner.yaml
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_not_dict.yaml
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_py_missing_type.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_cli.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_ignore.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_invalid_block.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_invalid_format.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_invalid_logger.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_invalid_registry.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_invalid_template.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_large_file.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_missing_entries.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_missing_fields.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_missing_registry.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_stamper_readonly.py
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_yaml_error.yaml
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_metadata_yaml_missing_type.yaml
  size: null
  type: file
metadata: null
mtime: null
name: invalid
size: null
type: directory
